--- a/src/app/ui/credit/credit-table/credit-table.component.html
+++ b/src/app/ui/credit/credit-table/credit-table.component.html
@@ -1,5 +1,5 @@
-<button class="m-2" mat-raised-button color="primary" (click)="getAll()">Buscar</button> 
-<mat-form-field>
+<button class="m-2" mat-raised-button color="primary" (click)="getAll()"><mat-icon>search</mat-icon>Buscar</button> 
+<mat-form-field class="col-3">
     <mat-label>Filtro</mat-label>
     <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
@@ -8,54 +8,68 @@
     <table mat-table [dataSource]="dataSource" matSort>
   
       <!-- Nombre Column -->
-      <ng-container matColumnDef="id_Usuario">
+      <!-- <ng-container matColumnDef="id_Usuario">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
         <td mat-cell *matCellDef="let row"> {{row.id_Usuario}} </td>
+        <td mat-footer-cell *matFooterCellDef class="font-weight-bold">Total: </td>
       </ng-container>
-  
+   -->
       <!-- Identificación Column -->
       <ng-container matColumnDef="nombre_Producto">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Producto </th>
         <td mat-cell *matCellDef="let row"> {{row.nombre_Producto}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+       <!-- Dirección Column -->
+       <ng-container matColumnDef="precio_Venta_Producto">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
+        <td mat-cell *matCellDef="let row" > ₡{{row.precio_Venta_Producto | number:'1.1-2'}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <!-- Correo Column -->
       <ng-container matColumnDef="cantidad">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad </th>
         <td mat-cell *matCellDef="let row" > {{row.cantidad}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
-      <!-- Dirección Column -->
-      <ng-container matColumnDef="precio_Venta_Producto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
-        <td mat-cell *matCellDef="let row" > {{row.precio_Venta_Producto}} </td>
+     <!-- Correo Column -->
+      <ng-container matColumnDef="precio_Total">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
+        <td mat-cell *matCellDef="let row" > ₡{{row.precio_Total | number:'1.1-2'}} </td>
+        <td mat-footer-cell *matFooterCellDef class="font-weight-bold"> {{ calculateTotal() | number:'1.1-2' }}</td>
       </ng-container>
 
        <!-- Celular Column -->
        <ng-container matColumnDef="fecha_Creacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
         <td mat-cell *matCellDef="let row" > {{row.fecha_Creacion | date: 'yyyy-MM-dd hh:mm:ss'}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
        <!-- Teléfono Column -->
-       <ng-container matColumnDef="estado">
+       <ng-container matColumnDef="descripcion_Estado">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
-        <td mat-cell *matCellDef="let row" > {{row.estado}} </td>
+        <td mat-cell *matCellDef="let row" > {{row.descripcion_Estado}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actionsColumn">
-        <th mat-header-cell *matHeaderCellDef>
-            <button class="m-2" mat-raised-button color="primary" (click)="goEdit(0)">Nuevo</button> 
-        </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
         <td mat-cell *matCellDef="let row"> 
             <button mat-button type="button" color="primary" (click)="goEdit(row.id)">Editar</button>
-            <button mat-button type="button" color="warn" (click)="delete(row.id)">Eliminar</button> 
+            <!-- <button mat-button type="button" color="warn" (click)="delete(row.id)">Eliminar</button>  -->
         </td>
+        <td mat-footer-cell *matFooterCellDef><td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns;"></tr>
+
     </table>
   
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
