--- a/src/app/ui/credit/credit-view/credit-view.component.html
+++ b/src/app/ui/credit/credit-view/credit-view.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12 pt-2">
-      <mot-credit-user-list></mot-credit-user-list>
-    </div>
+<div class="container-fluid p-3">
+  <div class="col-12 pt-2">
+    <mot-credit-user-list></mot-credit-user-list>
   </div>
   <!-- <div class="row">
     <div class="col-12 pt-2">
