--- a/src/app/ui/product/product-view/product-view.component.html
+++ b/src/app/ui/product/product-view/product-view.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid">
-    <div class="row">
-      <div class="col-12 pt-2">
-        <mot-product-table></mot-product-table>
-      </div>
+<div class="container-fluid  p-3">
+    <div class="col-12 pt-2">
+      <mot-product-table></mot-product-table>
     </div>
   </div>
   
