--- a/src/app/ui/user/user-table/user-table.component.html
+++ b/src/app/ui/user/user-table/user-table.component.html
@@ -1,4 +1,4 @@
-<button class="m-2" mat-raised-button color="primary" (click)="getAll()">Buscar</button> 
+<button class="m-2" mat-raised-button color="primary" (click)="getAll()"><mat-icon>search</mat-icon>Buscar</button> 
 <mat-form-field>
     <mat-label>Filtro</mat-label>
     <input matInput (keyup)="applyFilter($event)">
@@ -52,11 +52,11 @@
       <!-- Actions Column -->
       <ng-container matColumnDef="actionsColumn">
         <th mat-header-cell *matHeaderCellDef>
-            <button class="m-2" mat-raised-button color="primary" (click)="goEdit(0)">Nuevo</button> 
+            <button class="m-2" mat-raised-button color="primary" (click)="goEdit(0)"><mat-icon>add</mat-icon>Nuevo</button> 
         </th>
         <td mat-cell *matCellDef="let row"> 
-            <button mat-button type="button" color="primary" (click)="goEdit(row.id)">Editar</button>
-            <button mat-button type="button" color="warn" (click)="delete(row.id)">Eliminar</button> 
+            <button mat-button type="button" color="primary" (click)="goEdit(row.id)"><mat-icon>edit</mat-icon>Editar</button>
+            <button mat-button type="button" color="warn" (click)="delete(row.id)"><mat-icon>delete</mat-icon>Eliminar</button> 
         </td>
       </ng-container>
 
