--- a/src/app/ui/user/user-view/user-view.component.html
+++ b/src/app/ui/user/user-view/user-view.component.html
@@ -1,7 +1,5 @@
-<div class="container-fluid">
-  <div class="row">
+<div class="container-fluid p-3">
     <div class="col-12 pt-2">
       <mot-user-table></mot-user-table>
     </div>
-  </div>
 </div>
