avance de pagos, productos, etc

--- a/src/app/ui/credit/credit-edit/credit-edit.component.html
+++ b/src/app/ui/credit/credit-edit/credit-edit.component.html
@@ -76,7 +76,7 @@
       </div>
     
     <div class="col-md-8 col-sm-12">
-      <mot-credit-table *ngIf="!!modelUser" [idUsuario]="modelUser.id"></mot-credit-table>
+      <mot-credit-table *ngIf="!!modelUser" [estado]="estado" [idUsuario]="modelUser.id"></mot-credit-table>
     </div>
   </div>
 </div>
