--- a/src/app/ui/credit/credit-table/credit-table.component.html
+++ b/src/app/ui/credit/credit-table/credit-table.component.html
@@ -1,76 +1,67 @@
 <button class="m-2" mat-raised-button color="primary" (click)="getAll()"><mat-icon>search</mat-icon>Buscar</button> 
-<mat-form-field class="col-3">
+<mat-form-field class="col-md-4 col-sm-12">
     <mat-label>Filtro</mat-label>
     <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
   
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-  
-      <!-- Nombre Column -->
-      <!-- <ng-container matColumnDef="id_Usuario">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
-        <td mat-cell *matCellDef="let row"> {{row.id_Usuario}} </td>
-        <td mat-footer-cell *matFooterCellDef class="font-weight-bold">Total: </td>
-      </ng-container>
-   -->
-      <!-- Identificación Column -->
+    <mat-table mat-table [dataSource]="dataSource" matSort>
+
+      <!-- Nombre Producto Column -->
       <ng-container matColumnDef="nombre_Producto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Producto </th>
-        <td mat-cell *matCellDef="let row"> {{row.nombre_Producto}} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Producto </mat-header-cell>
+        <mat-cell *matCellDef="let row" data-label="Producto"> {{row.nombre_Producto}} </mat-cell>
+        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
       </ng-container>
 
-       <!-- Dirección Column -->
-       <ng-container matColumnDef="precio_Venta_Producto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
-        <td mat-cell *matCellDef="let row" > ₡{{row.precio_Venta_Producto | number:'1.1-2'}} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <!-- Correo Column -->
-      <ng-container matColumnDef="cantidad">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad </th>
-        <td mat-cell *matCellDef="let row" > {{row.cantidad}} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-     <!-- Correo Column -->
-      <ng-container matColumnDef="precio_Total">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
-        <td mat-cell *matCellDef="let row" > ₡{{row.precio_Total | number:'1.1-2'}} </td>
-        <td mat-footer-cell *matFooterCellDef class="font-weight-bold"> {{ calculateTotal() | number:'1.1-2' }}</td>
-      </ng-container>
-
-       <!-- Celular Column -->
+       <!-- Fecha Creación Column -->
        <ng-container matColumnDef="fecha_Creacion">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-        <td mat-cell *matCellDef="let row" > {{row.fecha_Creacion | date: 'yyyy-MM-dd hh:mm:ss'}} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </mat-header-cell>
+        <mat-cell *matCellDef="let row" data-label="Fecha"> {{row.fecha_Creacion | date: 'yyyy-MM-dd hh:mm:ss'}} </mat-cell>
+        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
       </ng-container>
 
-       <!-- Teléfono Column -->
+       <!-- Precio Venta Column -->
+       <ng-container matColumnDef="precio_Venta_Producto">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Precio </mat-header-cell>
+        <mat-cell *matCellDef="let row" data-label="Precio"> ₡{{row.precio_Venta_Producto | number:'1.1-2'}} </mat-cell>
+        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+      </ng-container>
+
+      <!-- Cantidad Column -->
+      <ng-container matColumnDef="cantidad">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad </mat-header-cell>
+        <mat-cell *matCellDef="let row" data-label="Cantidad"> {{row.cantidad}} </mat-cell>
+        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+      </ng-container>
+
+     <!-- Precio Total Column -->
+      <ng-container matColumnDef="precio_Total">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Total </mat-header-cell>
+        <mat-cell *matCellDef="let row" data-label="Total"> ₡{{row.precio_Total | number:'1.1-2'}} </mat-cell>
+        <mat-footer-cell *matFooterCellDef class="font-weight-bold"> ₡{{ calculateTotal() | number:'1.1-2' }}</mat-footer-cell>
+      </ng-container>
+
+       <!-- Estado Column -->
        <ng-container matColumnDef="descripcion_Estado">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
-        <td mat-cell *matCellDef="let row" > {{row.descripcion_Estado}} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
+        <mat-header-cell *matHeaderCellDef mat-sort-Estado> Estado </mat-header-cell>
+        <mat-cell *matCellDef="let row" data-label="Correo"> {{row.descripcion_Estado}} </mat-cell>
+        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
       </ng-container>
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actionsColumn">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
-        <td mat-cell *matCellDef="let row"> 
-            <button mat-button type="button" color="primary" (click)="goEdit(row.id)">Editar</button>
-            <!-- <button mat-button type="button" color="warn" (click)="delete(row.id)">Eliminar</button>  -->
-        </td>
-        <td mat-footer-cell *matFooterCellDef><td>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </mat-header-cell>
+        <mat-cell *matCellDef="let row"> 
+            <button mat-button type="button" color="primary" *ngIf="!!row.id_Pago_Parcial" (click)="goPay(row.id_Usuario,row.id_Pago_Parcial)">Ver Pago</button>
+        </mat-cell>
+        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      <tr mat-footer-row *matFooterRowDef="displayedColumns;"></tr>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-footer-row *matFooterRowDef="displayedColumns;"></mat-footer-row>
 
-    </table>
-  
+    </mat-table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
