--- a/src/app/ui/shared/nav-bar/nav-bar.component.html
+++ b/src/app/ui/shared/nav-bar/nav-bar.component.html
@@ -10,6 +10,9 @@
           <a class="nav-link" routerLink="/user" routerLinkActive="active">Usuario</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/category" routerLinkActive="active">Categorias</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/product" routerLinkActive="active">Producto</a>
         </li>
         <li class="nav-item">
