--- a/src/app/ui/shared/nav-bar/nav-bar.component.html
+++ b/src/app/ui/shared/nav-bar/nav-bar.component.html
@@ -18,6 +18,12 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/credit" routerLinkActive="active">Crédito</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/provider" routerLinkActive="active">Proveedor</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/order" routerLinkActive="active">Pedidos</a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
@@ -25,7 +31,7 @@
               {{ userName }}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="/logout">Logout</a>
+            <a class="dropdown-item" routerLink="/logout">Salir</a>
             <a class="dropdown-item" href="#">Mi Perfil</a>
           </div>
         </li>      
