cambio de prefijo del proyecto y agregar order- detail

--- a/src/app/ui/credit-payment/pay-credit-payment/pay-credit-payment.component.html
+++ b/src/app/ui/credit-payment/pay-credit-payment/pay-credit-payment.component.html
@@ -49,7 +49,7 @@
         </mat-card>
         </div>
         <div class="col-md-8 col-sm-12">
-          <mot-credit-table *ngIf="!!modelCredit" [estado]="estado" [idUsuario]="modelCredit.id_Usuario"></mot-credit-table>
+          <ferr-credit-table *ngIf="!!modelCredit" [estado]="estado" [idUsuario]="modelCredit.id_Usuario"></ferr-credit-table>
         </div>
     </div>
   </div>
