--- a/src/app/ui/credit-payment/payment-history/payment-history.component.html
+++ b/src/app/ui/credit-payment/payment-history/payment-history.component.html
@@ -51,8 +51,8 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 <div class="col-md-7 col-sm-12" [hidden]="isHidden">
-  <mot-display-credit-payment [payment]="paymentModel"></mot-display-credit-payment>
-  <mot-credit-table [estado]="estado" [idPago]="idPay"></mot-credit-table>
+  <ferr-display-credit-payment [payment]="paymentModel"></ferr-display-credit-payment>
+  <ferr-credit-table [estado]="estado" [idPago]="idPay"></ferr-credit-table>
 </div>
   
 </div>
