--- a/src/app/ui/credit-payment/view-credit-payment/view-credit-payment.component.html
+++ b/src/app/ui/credit-payment/view-credit-payment/view-credit-payment.component.html
@@ -5,7 +5,7 @@
         </div>
       </div>
     <mat-tab-group [selectedIndex]="selectedTab">
-        <mat-tab label="Pago" ><mot-pay-credit-payment [idUser]="idUser"></mot-pay-credit-payment></mat-tab>
-        <mat-tab label="Histórico"><mot-payment-history [idUser]="idUser" [idPay]="idPago"></mot-payment-history></mat-tab>
+        <mat-tab label="Pago" ><ferr-pay-credit-payment [idUser]="idUser"></ferr-pay-credit-payment></mat-tab>
+        <mat-tab label="Histórico"><ferr-payment-history [idUser]="idUser" [idPay]="idPago"></ferr-payment-history></mat-tab>
     </mat-tab-group>
 </div>
