--- a/src/app/ui/credit/credit-view/credit-view.component.html
+++ b/src/app/ui/credit/credit-view/credit-view.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-3">
   <div class="col-12 pt-2">
-    <mot-credit-user-list></mot-credit-user-list>
+    <ferr-credit-user-list></ferr-credit-user-list>
   </div>
 </div>
