--- a/src/app/ui/order/order-view/order-view.component.html
+++ b/src/app/ui/order/order-view/order-view.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid  p-3">
     <div class="col-12 pt-2">
-        <mot-order-table></mot-order-table>
+        <ferr-order-table></ferr-order-table>
     </div>
 </div>
