--- a/src/app/ui/provider/provider-view/provider-view.component.html
+++ b/src/app/ui/provider/provider-view/provider-view.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid  p-3">
     <div class="col-12 pt-2">
-        <mot-provider-table></mot-provider-table>
+        <ferr-provider-table></ferr-provider-table>
     </div>
 </div>
