--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row wrap" fxLayoutAlign="center center" class="layout-wrapper">
   <div fxFlex="100%" class="flex-wrapper">
-    <mot-nav-bar *ngIf="displayMenu"></mot-nav-bar>
+    <ferr-nav-bar *ngIf="displayMenu"></ferr-nav-bar>
     <mat-sidenav-container>
         <mat-sidenav-content>
           <div fxLayout="row" fxLayoutAlign="stretch" class="h-100">
@@ -12,7 +12,7 @@
       </mat-sidenav-container>
     </div>
     <footer class="page-footer font-small">
-      <div class="footer-copyright text-center py-3 bottom">© 2020 Copyright: Giancarlos Gamboa
+      <div class="footer-copyright text-center py-3 bottom">© {{year}} Copyright: Giancarlos Gamboa
       </div>
     </footer>
   </div>
