--- a/src/app/ui/category/category-view/category-view.component.html
+++ b/src/app/ui/category/category-view/category-view.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid  p-3">
     <div class="col-12 pt-2">
-      <mot-category-table></mot-category-table>
+      <ferr-category-table></ferr-category-table>
     </div>
   </div>
