--- a/src/app/ui/product/product-view/product-view.component.html
+++ b/src/app/ui/product/product-view/product-view.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid  p-3">
     <div class="col-12 pt-2">
-      <mot-product-table></mot-product-table>
+      <ferr-product-table></ferr-product-table>
     </div>
   </div>
   
